FIREFLY-932_upgrade_java_gradle (#1192)
* FIREFLY-932_upgrade_java_gradle
- upgrade openJDK to latest LTS v17.0
    - build and run with openJDK 17.0
- upgrade Gradle to latest v7.4
- after analysis, keeping tomcat at v9.0

* Firefly-932: fixed compile warnings

Co-authored-by: roby <roby@ipac.caltech.edu>